src/test/resources/shell/shellSyntaxErr/if/ifNothen.wacc
# if missing then clause

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

  if true
  else
    skip
  fi

